<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_DebugStation_VIO" Id="{96b300da-3090-4882-b26d-52697160546d}">
    <Declaration><![CDATA[TYPE ST_DebugStation_VIO :
STRUCT
//<CtrlBit>
	bDiagnosticMode						: BOOL;
//</CtrlBit>

//<DIO>
	// Actuate pan
	ipDBStnAPPresentSensor				: BOOL; // Actuate pan present signal, 0: Not present, 1: Present
	ipDBStnAPPowerOn                	: BOOL; // Actuate pan power on signal, 0: Power off, 1: Power on
	ipDBStnAPReady                  	: BOOL; // Actuate pan ready signal, 0: Not ready, 1: Ready
	ipDBStnHandlerSafeToEnterPLC		: BOOL;
	ipDBStnHandlerSafeToEnterHwr		: BOOL;
	
	ipSpare_1							: BOOL;
	ipSpare_2							: BOOL;
	ipSpare_3							: BOOL;
	ipSpare_4							: BOOL;
	
	ipDBStnCellGroundFault				: BOOL;
	ipDBStnCellFluidLeakage1			: BOOL; //debugcart3 new io
	ipDBStnCellFluidLeakage2			: BOOL; //debugcart3 new io
	ipDBStnPurgeButton					: BOOL; //debugcart3 new io
	                                
	opDBStnAP240ACPwrEnable				: BOOL;
	opAP_DIO_1							: BOOL;
	opAP_DIO_2							: BOOL;
	opAP_DIO_3							: BOOL;
	opDBStnPCWValve                 	: BOOL;
	opDBStnPCWFlowBypassValve			: BOOL;
	opDBStnBypassAPAirSupplySol			: BOOL;
	opDBStn24VPowerEnable				: BOOL;
	opDBStnLeakFlowPCWValve         	: BOOL;
	opDBStnLowFlowPCWValve				: BOOL;
	opDBStnAPSafeToEngage				: BOOL;
	opDBStnAPTCCReset					: BOOL;
	opDBStnMainPCWReturn				: BOOL;
	opDBStnPCWSupplyPurge				: BOOL;
	opCellLTIMValve						: BOOL;
	
	opDBStnAlarmLED						: BOOL;
	opDBStnPurgeLED						: BOOL;
	
	//debug cart #4 valves
	opDBStnPCWAWN						: BOOL; //not yet
	opDBStnSupplyAirPurge				: BOOL; //not yet
	
//</DIO>

//<CIO>
	ipDBStnTstAirLeakFlowSensor			: REAL; 
	ipDBStnAPAirLeakFlowSensor			: REAL;
	ipDBStnPCWLeakFlowSensor			: REAL;
	ipDBStnPCWLowFlowSensor				: REAL;
//</CIO>

//<CtrlIO>
	bAP240ACPowerOnOff					: BOOL	:= TRUE;
	bChkAP240On							: BOOL;
	bSecondary24VPowerOnOff				: BOOL	:= TRUE;
	bTstDelInt							: BOOL;
	bTIIAP240OnError					: BOOL;
	bTIIAPPrstError						: BOOL;
	bEnableAPPwrSupOnInit				: BOOL;
	
	bDBStnPurgeBtnLEDState				: BOOL; //LED #5: button state. 0: OFF, 1: ON / Blink
	iDBStnPurgeBtnLEDBlinkFreq			: DINT; //Blink frequency. <=0: NO BLINKING, >0: Blink
	bOffBtnLEDs							: ARRAY [4..5] OF BOOL;
	
	sAlarmMessage						: STRING;
	iAlarmCode 		: UDINT;
	isTIIError 		: BOOL; 
	TIIAlarmLED		: BOOL;
	isSysError 		: BOOL;
//</CtrlIO>

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>